# wwks2-ads-gateway

./: .gitignore  README.md  build.bat  pyproject.toml  requirements.txt  service.py  wwks2-ads-gateway.spec
tests/: mock_wwks2_server.py  wwks2_messages.txt
